--- a/Diffraction/CH2_08-Spot_Diffraction_Pattern.ipynb
+++ b/Diffraction/CH2_08-Spot_Diffraction_Pattern.ipynb
@@ -16,8 +16,6 @@
     "# Analyzing Spot Diffraction Pattern\n",
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Diffraction/CH2_08-Spot_Diffraction_Pattern.ipynb)\n",
-    " \n",
-    "\n",
     "\n",
     "part of \n",
     "\n",
@@ -50,6 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "installing pyTEMlib\n",
       "done\n"
      ]
     }
@@ -62,11 +61,11 @@
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
     "        version = get_distribution(package_name).version\n",
-    "    except (DistributionNotFound, ImportError) as err:\n",
+    "    except (DistributionNotFound, ImportError):\n",
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "if test_package('pyTEMlib') < '0.2022.1.0':\n",
+    "if test_package('pyTEMlib') < '0.2022.1.2':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "print('done')"
@@ -106,15 +105,15 @@
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n",
       "Symmetry functions of spglib enabled\n",
-      "Using kinematic_scattering library version  0.6  by G.Duscher\n",
-      "0.2022.1.0\n"
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
+      "0.2022.1.1\n"
      ]
     }
    ],
    "source": [
     "# import matplotlib and numpy\n",
     "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
-    "%pylab --no-import-all notebook\n",
+    "%pylab notebook\n",
     "\n",
     "# additional package \n",
     "import  itertools \n",
@@ -126,10 +125,10 @@
     "\n",
     "# Import libraries from pyTEMlib\n",
     "import pyTEMlib\n",
-    "import pyTEMlib.kinematic_scattering as ks         # Kinematic sCattering Library\n",
-    "                             # Atomic form factors from Kirklands book\n",
+    "import pyTEMlib.kinematic_scattering as ks         # Kinematic scattering Library\n",
+    "                             # Atomic form factors from Kirkland's book\n",
     "\n",
-    "### And we use the image tool library of Quantifit\n",
+    "### And we use the image tool library of pyTEMlib\n",
     "import pyTEMlib.file_tools as ft\n",
     "import pyTEMlib\n",
     "print(pyTEMlib.__version__)"
@@ -145,7 +144,7 @@
     "- Make sure that area of interest is in focus.\n",
     "- Insert SAD or equivalent aperture in image plane\n",
     "- Remove objective aperture (let all the diffracted beams through)\n",
-    "- Focus the SAD aperture (Put's that apertre  in the image plane of the objective lens)\n",
+    "- Focus the SAD aperture (Put's that aperture  in the image plane of the objective lens)\n",
     "- Switch to diffraction mode \n",
     "- Adjust convergence angle  (C3) within the limits given by the area you want to investigate\n",
     "- Focus the diffraction pattern with the intermediate lens (diffraction focus).\n",
@@ -156,9 +155,9 @@
     ">**Some tips:**\n",
     ">- cooling the specimen will reduce thermal diffuse scattering (scattering at phonons).\n",
     ">\n",
-    ">- With a Gatan Image Filter (GIF) or a in-column filter one can filter out the inelastic scattering  (lower energy) electrons responsible for a lot of the background intensity.\n",
+    ">- With a Gatan Image Filter (GIF) or an in-column filter one can filter out the inelastic scattering  (lower energy) electrons responsible for a lot of the background intensity.\n",
     ">\n",
-    ">- CCD cameras usually have a lower dynamic range  and can be easily damaged by the zero refection. Summing several diffraction pattern increases the dynamic range of the data.\n",
+    ">- CCD cameras usually have a lower dynamic range  and can be easily damaged by the zero refection. Summing several diffraction-pattern increases the dynamic range of the data.\n",
     ">\n",
     ">- Changes in the lattice parameter due to stress will not be easily seen in the diffraction patterns, but HOLZ line patterns (later) give that level of accuracy.\n"
    ]
@@ -2190,9 +2189,9 @@
    "source": [
     "### Plotting on a logarithmic scale\n",
     "\n",
-    "The dynamic range in diffraction data is even larger than in images and so for a good presentation of the data it is advantagous to go to plot the intensities in a logarythmic scale.\n",
+    "The dynamic range in diffraction data is even larger than in images and so for a good presentation of the data it is advantageous to go to plot the intensities in a logarithmic scale.\n",
     "\n",
-    "To present data in logarythmic scale no nexgative values (noise) can be in these data and so all negative values in the dataset will be set to zero.\n",
+    "To present data in logarithmic scale no negative values (noise) can be in these data and so all negative values in the dataset will be set to zero.\n",
     "\n",
     "The factor 1 in front of the diffraction pattern in the log numpy function in the ``imshow`` is the gamma value.\n",
     "Changing that value will change the contrast."
@@ -3223,8 +3222,8 @@
    "source": [
     "### Finding the center of the beam-stop\n",
     "\n",
-    "The beam-stop is naturally dark and we first select the dark regions.\n",
-    "These dark regions are naturally spotty and we set all small values to \n",
+    "The beam-stop is naturally dark, and we first select the dark regions.\n",
+    "These dark regions are naturally spotty, and we set all small values to\n",
     "\n",
     "We first find the maximum of the profile for the \n"
    ]
@@ -5327,7 +5326,7 @@
    "source": [
     "### Refine Center\n",
     "\n",
-    "We use the N innermost reflections and the average of those poisiotns is the new center"
+    "We use the N innermost reflections and the average of those positions is the new center"
    ]
   },
   {
@@ -7389,11 +7388,11 @@
     "fig = plt.figure()\n",
     "extent= np.array([-center[0]*gx, (diff_pattern.shape[0]-center[0])*gx,(diff_pattern.shape[1]-center[1])*gy, -center[1]*gy])\n",
     "\n",
-    "plt.imshow(np.log2(1+diff_pattern),cmap=\"gray\", extent=(extent), vmin=np.max(np.log2(1+diff_pattern))*0.5)\n",
+    "plt.imshow(np.log2(1+diff_pattern), cmap=\"gray\", extent=extent, vmin=np.max(np.log2(1 + diff_pattern)) * 0.5)\n",
     "\n",
     "plt.scatter(spots_experiment[:,0], spots_experiment[:,1], c='green',  alpha = 0.5,\n",
     "           label='spots')\n",
-    "plt.xlabel('reciprocal distance [1/$\\AA$]');\n",
+    "plt.xlabel('reciprocal distance [1/$\\AA$]')\n",
     "plt.scatter(0,0, color='red')\n"
    ]
   },
@@ -7403,7 +7402,7 @@
    "source": [
     "### The norm of the reflections \n",
     "will show us how accurate our center was determined and what give us a first idea on what zone axis we have.\n",
-    "If the center is accurate, we should have always a number of spots with the same distance from center (norm of reciprocal lattice vetor) according to symmetery (in [001] direction always 4 reciprocal lattice vectors with the same length)"
+    "If the center is accurate, we should have always a number of spots with the same distance from center (norm of reciprocal lattice vector) according to symmetry (in [001] direction always 4 reciprocal lattice vectors with the same length)"
    ]
   },
   {
@@ -7436,7 +7435,7 @@
    "source": [
     "## Calculate Spot Pattern\n",
     "\n",
-    "see [Plotting of Diffraction Pattern](Plotting_Diffraction_Pattern.ipynb) for details\n"
+    "see [Plotting of Diffraction Pattern](CH2_07-Plotting_Diffraction_Pattern.ipynb) for details\n"
    ]
   },
   {
@@ -8353,7 +8352,7 @@
     "atoms.info['experimental']['new_figure'] = False\n",
     "atoms.info['experimental']['plot FOV'] = 30\n",
     "atoms.info['experimental']['convergence_angle_mrad'] = 0\n",
-    "atoms.info['experimental']['zone_hkl'] = np.array([0,0,1])  # incident neares zone axis: defines Laue Zones!!!!\n",
+    "atoms.info['experimental']['zone_hkl'] = np.array([0,0,1])  # incident nearest zone axis: defines Laue Zones!!!!\n",
     "atoms.info['experimental']['mistilt']  = np.array([0,0,0])  # mistilt in degrees\n",
     "atoms.info['experimental']['Sg_max'] = .4 # 1/nm  maximum allowed excitation error ; This parameter is related to the thickness\n",
     "atoms.info['experimental']['hkl_max'] = 15   # Highest evaluated Miller indices\n",
@@ -9417,7 +9416,7 @@
     "fig.suptitle(' SAED in ' + str( atoms.info['experimental']['zone_hkl']), fontsize=20) \n",
     "plt.scatter(spots_experiment[:,0], spots_experiment[:,1], c='blue',  alpha = 0.5, label='spots')\n",
     "plt.scatter(spots_ZOLZ[:,0], spots_ZOLZ[:,1], c='red',  alpha = 0.2,   label='spots')\n",
-    "plt.imshow(np.log2(1+diff_pattern),cmap=\"gray\", extent=(extent), vmin=np.max(np.log2(1+diff_pattern))*0.5);\n",
+    "plt.imshow(np.log2(1+diff_pattern), cmap=\"gray\", extent=extent, vmin=np.max(np.log2(1 + diff_pattern)) * 0.5)\n",
     "\n",
     "for i in range(len(tags_simulation['allowed']['g'])):\n",
     "    if np.linalg.norm(tags_simulation['allowed']['g'][i]) <.8:\n",
@@ -9447,7 +9446,7 @@
     "\n",
     "Change the scale by 1% and see what happens\n",
     "\n",
-    "So we can determine the lattce parameter better than 1% if we use high scattering angles!\n",
+    "So we can determine the lattice parameter better than 1% if we use high scattering angles!\n",
     "\n",
     "Objective stigmation is critical to resolve angles well.\n",
     "\n",
@@ -9464,7 +9463,7 @@
     "\n",
     "A comparison between simulation and experiment can be very precise.\n",
     "\n",
-    "In principle, if you have the spots and the approximate center you can let an optimization routine do all the scaling for you (which we will do in the high resultion imaging section).\n",
+    "In principle, if you have the spots and the approximate center you can let an optimization routine do all the scaling for you (which we will do in the high resolution imaging section).\n",
     "\n"
    ]
   },
@@ -10320,9 +10319,9 @@
     "#######################################\n",
     "# Diffraction Simulation of a Crystal #\n",
     "#######################################\n",
-    "tags_simulation['zone_hkl'] = np.array([0,1,1])  # incident neares zone axis: defines Laue Zones!!!!\n",
+    "tags_simulation['zone_hkl'] = np.array([0,1,1])  # incident nearest zone axis: defines Laue Zones!!!!\n",
     "tags_simulation['acceleration_voltage_V'] = 60.0 *1000.0 #V\n",
-    "ks.Kinematic_Scattering(tags_simulation, verbose = True)\n",
+    "ks.kinematic_scattering(tags_simulation, verbose = True)\n",
     "plt.figure()\n",
     "plt.scatter(tags_simulation['allowed']['g'][:,0],tags_simulation['allowed']['g'][:,1])\n",
     "dynamic_allowed = tags_simulation['forbidden']['g'][tags_simulation['forbidden']['dynamically_activated']]\n",
