--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -176,7 +176,7 @@
     "pycharm": {
      "is_executing": true
     },
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -242,6 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "installing pyTEMlib\n",
       "done\n"
      ]
     }
@@ -309,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -317,19 +318,27 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version  0.6  by G.Duscher\n"
+     ]
+    },
+    {
      "ename": "AttributeError",
-     "evalue": "module 'pyTEMlib.crystal_tools' has no attribute 'structure_by_name'",
+     "evalue": "module 'pyTEMlib.kinematic_scattering' has no attribute 'structure_by_name'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16956/3545224575.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# make a structure dictionary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mtags\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpyTEMlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcrystal_tools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstructure_by_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Graphite'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# define bond length for plot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'pyTEMlib.crystal_tools' has no attribute 'structure_by_name'"
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1444/848636944.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# make a structure dictionary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0matoms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstructure_by_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Graphite'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0matoms\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pyTEMlib.kinematic_scattering' has no attribute 'structure_by_name'"
      ]
     }
    ],
    "source": [
-    "import pyTEMlib.kineamtic_scattering as ks # Import kinematic scattering library from pyTEMlib\n",
+    "import pyTEMlib.kinematic_scattering as ks # Import kinematic scattering library from pyTEMlib\n",
     "\n",
     "# make a structure dictionary\n",
     "atoms = ks.structure_by_name('Graphite')\n",
