--- a/Diffraction/CH2_03-Basic_Crystallography.ipynb
+++ b/Diffraction/CH2_03-Basic_Crystallography.ipynb
@@ -48,114 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "installing pyTEMlib\n",
-      "Requirement already satisfied: pyTEMlib in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (0.2022.1.0)\n",
-      "Requirement already satisfied: simpleITK in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (2.1.1)\n",
-      "Requirement already satisfied: numpy in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (1.20.3)\n",
-      "Requirement already satisfied: ipyfilechooser in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (0.6.0)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (0.24.2)\n",
-      "Requirement already satisfied: pyNSID in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (0.0.3)\n",
-      "Requirement already satisfied: sidpy in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (0.0.8)\n",
-      "Requirement already satisfied: pillow in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (8.4.0)\n",
-      "Requirement already satisfied: ase in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (3.22.1)\n",
-      "Requirement already satisfied: pandas in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (1.3.4)\n",
-      "Requirement already satisfied: scikit-image in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (0.18.3)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (4.62.3)\n",
-      "Requirement already satisfied: SciFiReaders in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (0.0.3)\n",
-      "Requirement already satisfied: plotly in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (5.5.0)\n",
-      "Requirement already satisfied: scipy in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyTEMlib) (1.7.1)\n",
-      "Requirement already satisfied: matplotlib>=3.1.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ase->pyTEMlib) (3.4.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from matplotlib>=3.1.0->ase->pyTEMlib) (2.8.2)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from matplotlib>=3.1.0->ase->pyTEMlib) (3.0.4)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from matplotlib>=3.1.0->ase->pyTEMlib) (1.3.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from matplotlib>=3.1.0->ase->pyTEMlib) (0.10.0)\n",
-      "Requirement already satisfied: six in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from cycler>=0.10->matplotlib>=3.1.0->ase->pyTEMlib) (1.16.0)\n",
-      "Requirement already satisfied: ipywidgets in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipyfilechooser->pyTEMlib) (7.6.5)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipywidgets->ipyfilechooser->pyTEMlib) (5.1.0)\n",
-      "Requirement already satisfied: ipython-genutils~=0.2.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipywidgets->ipyfilechooser->pyTEMlib) (0.2.0)\n",
-      "Requirement already satisfied: jupyterlab-widgets>=1.0.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipywidgets->ipyfilechooser->pyTEMlib) (1.0.0)\n",
-      "Requirement already satisfied: ipython>=4.0.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipywidgets->ipyfilechooser->pyTEMlib) (7.29.0)\n",
-      "Requirement already satisfied: ipykernel>=4.5.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipywidgets->ipyfilechooser->pyTEMlib) (6.4.1)\n",
-      "Requirement already satisfied: widgetsnbextension~=3.5.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipywidgets->ipyfilechooser->pyTEMlib) (3.5.1)\n",
-      "Requirement already satisfied: nbformat>=4.2.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipywidgets->ipyfilechooser->pyTEMlib) (5.1.3)\n",
-      "Requirement already satisfied: tornado<7.0,>=4.2 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets->ipyfilechooser->pyTEMlib) (6.1)\n",
-      "Requirement already satisfied: matplotlib-inline<0.2.0,>=0.1.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets->ipyfilechooser->pyTEMlib) (0.1.2)\n",
-      "Requirement already satisfied: debugpy<2.0,>=1.0.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets->ipyfilechooser->pyTEMlib) (1.4.1)\n",
-      "Requirement already satisfied: jupyter-client<8.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets->ipyfilechooser->pyTEMlib) (6.1.12)\n",
-      "Requirement already satisfied: colorama in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.4.4)\n",
-      "Requirement already satisfied: decorator in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (5.1.0)\n",
-      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (3.0.20)\n",
-      "Requirement already satisfied: pygments in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (2.10.0)\n",
-      "Requirement already satisfied: jedi>=0.16 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.18.0)\n",
-      "Requirement already satisfied: setuptools>=18.5 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (58.0.4)\n",
-      "Requirement already satisfied: pickleshare in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.7.5)\n",
-      "Requirement already satisfied: backcall in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.2.0)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from jedi>=0.16->ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.8.2)\n",
-      "Requirement already satisfied: pyzmq>=13 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from jupyter-client<8.0->ipykernel>=4.5.1->ipywidgets->ipyfilechooser->pyTEMlib) (22.2.1)\n",
-      "Requirement already satisfied: jupyter-core>=4.6.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from jupyter-client<8.0->ipykernel>=4.5.1->ipywidgets->ipyfilechooser->pyTEMlib) (4.8.1)\n",
-      "Requirement already satisfied: pywin32>=1.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from jupyter-core>=4.6.0->jupyter-client<8.0->ipykernel>=4.5.1->ipywidgets->ipyfilechooser->pyTEMlib) (228)\n",
-      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbformat>=4.2.0->ipywidgets->ipyfilechooser->pyTEMlib) (3.2.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets->ipyfilechooser->pyTEMlib) (21.2.0)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.18.0)\n",
-      "Requirement already satisfied: wcwidth in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=4.0.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.2.5)\n",
-      "Requirement already satisfied: notebook>=4.4.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (6.4.5)\n",
-      "Requirement already satisfied: prometheus-client in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.11.0)\n",
-      "Requirement already satisfied: Send2Trash>=1.5.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (1.8.0)\n",
-      "Requirement already satisfied: jinja2 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (2.11.3)\n",
-      "Requirement already satisfied: terminado>=0.8.3 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.9.4)\n",
-      "Requirement already satisfied: argon2-cffi in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (20.1.0)\n",
-      "Requirement already satisfied: nbconvert in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (6.1.0)\n",
-      "Requirement already satisfied: pywinpty>=0.5 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from terminado>=0.8.3->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.5.7)\n",
-      "Requirement already satisfied: cffi>=1.0.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (1.14.6)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from cffi>=1.0.0->argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (2.20)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (1.1.1)done\n",
-      "Requirement already satisfied: defusedxml in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.7.1)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: mistune<2,>=0.8.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.8.4)\n",
-      "Requirement already satisfied: entrypoints>=0.2.2 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.3)\n",
-      "Requirement already satisfied: nbclient<0.6.0,>=0.5.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.5.3)\n",
-      "Requirement already satisfied: testpath in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.5.0)\n",
-      "Requirement already satisfied: jupyterlab-pygments in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.1.2)\n",
-      "Requirement already satisfied: bleach in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (4.0.0)\n",
-      "Requirement already satisfied: pandocfilters>=1.4.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (1.4.3)\n",
-      "Requirement already satisfied: nest-asyncio in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbclient<0.6.0,>=0.5.0->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (1.5.1)\n",
-      "Requirement already satisfied: async-generator in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from nbclient<0.6.0,>=0.5.0->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (1.10)\n",
-      "Requirement already satisfied: webencodings in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (0.5.1)\n",
-      "Requirement already satisfied: packaging in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets->ipyfilechooser->pyTEMlib) (21.0)\n",
-      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pandas->pyTEMlib) (2021.3)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from plotly->pyTEMlib) (8.0.1)\n",
-      "Requirement already satisfied: cytoolz in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyNSID->pyTEMlib) (0.11.0)\n",
-      "Requirement already satisfied: h5py>=2.6.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyNSID->pyTEMlib) (3.2.1)\n",
-      "Requirement already satisfied: toolz in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyNSID->pyTEMlib) (0.11.1)\n",
-      "Requirement already satisfied: dask>=0.10 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from pyNSID->pyTEMlib) (2021.10.0)\n",
-      "Requirement already satisfied: cloudpickle>=1.1.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from dask>=0.10->pyNSID->pyTEMlib) (2.0.0)\n",
-      "Requirement already satisfied: fsspec>=0.6.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from dask>=0.10->pyNSID->pyTEMlib) (2021.10.1)\n",
-      "Requirement already satisfied: partd>=0.3.10 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from dask>=0.10->pyNSID->pyTEMlib) (1.2.0)\n",
-      "Requirement already satisfied: pyyaml in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from dask>=0.10->pyNSID->pyTEMlib) (6.0)\n",
-      "Requirement already satisfied: locket in c:\\users\\gduscher\\anaconda3\\lib\\site-packages\\locket-0.2.1-py3.9.egg (from partd>=0.3.10->dask>=0.10->pyNSID->pyTEMlib) (0.2.1)\n",
-      "Requirement already satisfied: joblib>=0.11.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from sidpy->pyTEMlib) (1.1.0)\n",
-      "Requirement already satisfied: distributed>=2.0.0psutil in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from sidpy->pyTEMlib) (2021.10.0)\n",
-      "Requirement already satisfied: click>=6.6 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from distributed>=2.0.0psutil->sidpy->pyTEMlib) (8.0.3)\n",
-      "Requirement already satisfied: sortedcontainers!=2.0.0,!=2.0.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from distributed>=2.0.0psutil->sidpy->pyTEMlib) (2.4.0)\n",
-      "Requirement already satisfied: tblib>=1.6.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from distributed>=2.0.0psutil->sidpy->pyTEMlib) (1.7.0)\n",
-      "Requirement already satisfied: psutil>=5.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from distributed>=2.0.0psutil->sidpy->pyTEMlib) (5.8.0)\n",
-      "Requirement already satisfied: zict>=0.1.3 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from distributed>=2.0.0psutil->sidpy->pyTEMlib) (2.0.0)\n",
-      "Requirement already satisfied: msgpack>=0.6.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from distributed>=2.0.0psutil->sidpy->pyTEMlib) (1.0.2)\n",
-      "Requirement already satisfied: heapdict in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from zict>=0.1.3->distributed>=2.0.0psutil->sidpy->pyTEMlib) (1.0.1)\n",
-      "Requirement already satisfied: pyUSID in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from SciFiReaders->pyTEMlib) (0.0.10)\n",
-      "Requirement already satisfied: wget in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from SciFiReaders->pyTEMlib) (3.2)\n",
-      "Requirement already satisfied: igor in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from SciFiReaders->pyTEMlib) (0.3)\n",
-      "Requirement already satisfied: networkx>=2.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from scikit-image->pyTEMlib) (2.6.3)\n",
-      "Requirement already satisfied: imageio>=2.3.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from scikit-image->pyTEMlib) (2.9.0)\n",
-      "Requirement already satisfied: tifffile>=2019.7.26 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from scikit-image->pyTEMlib) (2021.7.2)\n",
-      "Requirement already satisfied: PyWavelets>=1.1.1 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from scikit-image->pyTEMlib) (1.1.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\gduscher\\anaconda3\\lib\\site-packages (from scikit-learn->pyTEMlib) (2.2.0)\n"
+      "done\n"
      ]
     }
    ],
@@ -212,7 +105,7 @@
       "Populating the interactive namespace from numpy and matplotlib\n",
       "Symmetry functions of spglib enabled\n",
       "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
-      "pyTEM version:  0.2022.1.1\n"
+      "pyTEM version:  0.2022.2.0\n"
      ]
     }
    ],
@@ -1545,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1447,7 @@
        "<Popen: returncode: None args: ['C:\\\\Users\\\\gduscher\\\\Anaconda3\\\\python.exe'...>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2331,7 +2224,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2359,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2389,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2428,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2476,7 +2369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
