--- a/Homework/Homework02.ipynb
+++ b/Homework/Homework02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\"> **Chapter 1: [Introduction](CH1_00-Introduction.ipynb)** </font>\n",
+    "<font size = \"5\"> **Chapter 2: [Introduction](CH1_00-Introduction.ipynb)** </font>\n",
     "\n",
     "\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
@@ -61,7 +61,7 @@
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "if test_package('pyTEMlib') < '0.2022.2.0':\n",
+    "if test_package('pyTEMlib') < '0.2022.2.1':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,8 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n",
-      "pyTEM version:  0.2022.1.1\n"
+      "Symmetry functions of spglib enabled\n",
+      "pyTEM version:  0.2022.2.1\n"
      ]
     }
    ],
@@ -127,9 +128,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file type not handled yet.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'plot'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6988/1733470569.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmain_dataset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mft\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mview\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmain_dataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'plot'"
+     ]
+    }
+   ],
    "source": [
     "main_dataset = ft.open_file()\n",
     "\n",
