--- a/Homework/Homework02.ipynb
+++ b/Homework/Homework02.ipynb
@@ -59,6 +59,7 @@
     }
    ],
    "source": [
+    "import sys\n",
     "from pkg_resources import get_distribution, DistributionNotFound\n",
     "\n",
     "def test_package(package_name):\n",
