added notebook version to HOLZ part

--- a/Diffraction/CH2_12-HOLZ_Example.ipynb
+++ b/Diffraction/CH2_12-HOLZ_Example.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -110,7 +110,10 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n",
-      "0.2022.2.4\n"
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
+      "pyTEM version:  0.2022.2.5\n",
+      "notebook version:  2022.02.21\n"
      ]
     }
    ],
@@ -133,7 +136,11 @@
     "### And we use the image tool library of Quantifit\n",
     "import pyTEMlib.file_tools as ft\n",
     "import pyTEMlib\n",
-    "print(pyTEMlib.__version__)"
+    "\n",
+    "__notebook_version__ = '2022.02.21'\n",
+    "\n",
+    "print('pyTEM version: ', pyTEMlib.__version__)\n",
+    "print('notebook version: ', __notebook_version__)"
    ]
   },
   {
@@ -150,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -173,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1184,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2220,7 +2227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -2247,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2295,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -3353,7 +3360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4423,7 +4430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -5483,7 +5490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5500,7 +5507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
