Updated Dynamic Diffraction to ASE compatibility

--- a/Diffraction/CH2_D01-Bloch.ipynb
+++ b/Diffraction/CH2_D01-Bloch.ipynb
@@ -13,20 +13,16 @@
     "# Bethe Theory\n",
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Diffraction/CCH2_D01-Bloch.ipynb)\n",
-    " \n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Diffraction/CH2_D01-Bloch.ipynb)\n",
-    "\n",
     "\n",
     "\n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -61,11 +57,7 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    %pylab --no-import-all inline\n",
-    "else:\n",
-    "    %pylab --no-import-all notebook"
+    "%pylab --no-import-all notebook"
    ]
   },
   {
@@ -1574,7 +1566,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1588,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": "14",
