--- a/Diffraction/CH2_HW7-Dynamic_CBED.ipynb
+++ b/Diffraction/CH2_HW7-Dynamic_CBED.ipynb
@@ -26,10 +26,10 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -42,9 +42,12 @@
    "source": [
     "## Homework Assignment\n",
     "\n",
-    "Simulate the silicon [001] CBED diffraction pattern from Homework 5 (use the one with the higher camera length.\n",
+    "Simulate the silicon [001] CBED diffraction pattern from Lab 4 (use the one with the higher camera length.\n",
     "\n",
-    "That homweork is best done on Google colab.\n",
+    "That homework has to be done on Google colab.\n",
+    "\n",
+    "Press the **Open In Colab** button above.\n",
+    "\n",
     ">\n",
     ">Please note that you will have to activate the ``GPU`` under the Menu ``Runtime`` select ``Change runtime type`` \n",
     ">\n",
@@ -327,7 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "livereveal": {
    "height": 768,
