updated to new pyTEMlib version

--- a/Homework/Homework05-CBED.ipynb
+++ b/Homework/Homework05-CBED.ipynb
@@ -41,14 +41,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "installing pyTEMlib\n",
       "done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Exception:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 438, in _error_catcher\n",
+      "    yield\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 519, in read\n",
+      "    data = self._fp.read(amt) if not fp_closed else b\"\"\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\cachecontrol\\filewrapper.py\", line 62, in read\n",
+      "    data = self.__fp.read(amt)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\http\\client.py\", line 462, in read\n",
+      "    n = self.readinto(b)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\http\\client.py\", line 506, in readinto\n",
+      "    n = self.fp.readinto(b)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\socket.py\", line 704, in readinto\n",
+      "    return self._sock.recv_into(b)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\ssl.py\", line 1241, in recv_into\n",
+      "    return self.read(nbytes, buffer)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\ssl.py\", line 1099, in read\n",
+      "    return self._sslobj.read(len, buffer)\n",
+      "socket.timeout: The read operation timed out\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\cli\\base_command.py\", line 173, in _main\n",
+      "    status = self.run(options, args)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\cli\\req_command.py\", line 203, in wrapper\n",
+      "    return func(self, options, args)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\commands\\install.py\", line 315, in run\n",
+      "    requirement_set = resolver.resolve(\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\resolver.py\", line 94, in resolve\n",
+      "    result = self._result = resolver.resolve(\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\resolvelib\\resolvers.py\", line 472, in resolve\n",
+      "    state = resolution.resolve(requirements, max_rounds=max_rounds)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\resolvelib\\resolvers.py\", line 341, in resolve\n",
+      "    self._add_to_criteria(self.state.criteria, r, parent=None)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\resolvelib\\resolvers.py\", line 172, in _add_to_criteria\n",
+      "    if not criterion.candidates:\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\resolvelib\\structs.py\", line 151, in __bool__\n",
+      "    return bool(self._sequence)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\found_candidates.py\", line 140, in __bool__\n",
+      "    return any(self)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\found_candidates.py\", line 128, in <genexpr>\n",
+      "    return (c for c in iterator if id(c) not in self._incompatible_ids)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\found_candidates.py\", line 82, in _iter_built_with_inserted\n",
+      "    candidate = func()\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\factory.py\", line 204, in _make_candidate_from_link\n",
+      "    self._link_candidate_cache[link] = LinkCandidate(\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\candidates.py\", line 295, in __init__\n",
+      "    super().__init__(\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\candidates.py\", line 156, in __init__\n",
+      "    self.dist = self._prepare()\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\candidates.py\", line 227, in _prepare\n",
+      "    dist = self._prepare_distribution()\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\resolution\\resolvelib\\candidates.py\", line 305, in _prepare_distribution\n",
+      "    return self._factory.preparer.prepare_linked_requirement(\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\operations\\prepare.py\", line 508, in prepare_linked_requirement\n",
+      "    return self._prepare_linked_requirement(req, parallel_builds)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\operations\\prepare.py\", line 550, in _prepare_linked_requirement\n",
+      "    local_file = unpack_url(\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\operations\\prepare.py\", line 239, in unpack_url\n",
+      "    file = get_http_url(\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\operations\\prepare.py\", line 102, in get_http_url\n",
+      "    from_path, content_type = download(link, temp_dir.path)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\network\\download.py\", line 145, in __call__\n",
+      "    for chunk in chunks:\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_internal\\network\\utils.py\", line 63, in response_chunks\n",
+      "    for chunk in response.raw.stream(\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 576, in stream\n",
+      "    data = self.read(amt=amt, decode_content=decode_content)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 541, in read\n",
+      "    raise IncompleteRead(self._fp_bytes_read, self.length_remaining)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\contextlib.py\", line 137, in __exit__\n",
+      "    self.gen.throw(typ, value, traceback)\n",
+      "  File \"C:\\Users\\gduscher\\Anaconda3\\lib\\site-packages\\pip\\_vendor\\urllib3\\response.py\", line 443, in _error_catcher\n",
+      "    raise ReadTimeoutError(self._pool, None, \"Read timed out.\")\n",
+      "pip._vendor.urllib3.exceptions.ReadTimeoutError: HTTPSConnectionPool(host='files.pythonhosted.org', port=443): Read timed out.\n"
      ]
     }
    ],
@@ -66,7 +149,7 @@
     "\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2022.2.5':\n",
+    "if test_package('pyTEMlib') < '0.2022.3.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
