--- a/Diffraction/CH2_D01-Bloch.ipynb
+++ b/Diffraction/CH2_D01-Bloch.ipynb
@@ -1575,7 +1575,7 @@
     "## Navigation\n",
     "\n",
     "\n",
-    "- <font size = \"3\">  **Next: [Mutli-Slice Theory](CH2_D02-Multi_Slice.ipynb)** </font>\n",
+    "- <font size = \"3\">  **Next: [Mutli-Slice Theory](CCH2_D01-Bloch.ipyn)** </font>\n",
     "- <font size = \"3\">  **Chapter 2: [Diffraction](CH2_00-Diffraction.ipynb)** </font>\n",
     "- <font size = \"3\">  **List of Content: [Front](../_MSE672_Intro_TEM.ipynb)** </font>"
    ]
