--- a/Introduction/CH1_05-Course_Organization.ipynb
+++ b/Introduction/CH1_05-Course_Organization.ipynb
@@ -113,9 +113,9 @@
     "|02/14 - 02/20 | 8,9:Kinematic Diffraction -convergent   | 19,20 | Lab3: SAED |\n",
     "|02/21 - 02/27 | 10,11:Dynamic Diffraction | 14,15 | Lab4: CBED |\n",
     "|02/28 - 03/06 | 12:Imaging Overview | 22 | Lab5: Two Beams|\n",
-    "|03/07 - 03/13 | 13,14:Imaging Conventional | 24-27 | Lab6 Exam Preparation|\n",
-    "|03/21 - 03/27 | 15,16:Imaging Phase Contrast | 28,30 | Exam|\n",
-    "|03/28 - 04/03 | 17,18:Imaging and Lens Aberrations | 31 | Lab7: Phase Contrast|\n",
+    "|03/07 - 03/13 | 13,14:Imaging Conventional | 24-27 | Lab7: Phase Contrast|\n",
+    "|03/21 - 03/27 | 15,16:Imaging Phase Contrast | 28,30 | Lab6: Exam Preparation|\n",
+    "|03/28 - 04/03 | 17,18:Imaging and Lens Aberrations | 31 | Exam |\n",
     "|04/04 - 04/10  | 19,20:Imaging Z-contrast| -  | Lab8: CTF|\n",
     "|04/11 - 04/17 | 21,22:Spectroscopy EELS | 36-40 | Lab9: Z-contrast|\n",
     "|04/18 - 04/24  | 23,24:Spectroscopy EDS | 33-35 | Lab10: EELS, ESI|\n",
@@ -133,8 +133,9 @@
    },
    "source": [
     "## Office Hours\n",
-    "Office hours are Thursday  from 2 -- 4pm \\\\\n",
-    "online with the class zoom link\\\\\n",
+    "Office hours are Thursday  from 2 -- 4pm \n",
+    "online with the class zoom link.\n",
+    "\n",
     "I will answer email questions in the same time slots.\n",
     "\n",
     "## Class and Lab\n",
