Update to Angstrom

--- a/Imaging/CH3_00-Imaging.ipynb
+++ b/Imaging/CH3_00-Imaging.ipynb
@@ -17,10 +17,10 @@
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -38,14 +38,15 @@
     "* [Introduction to Phase Contrast Imaging](CH3_02-Intro_HRTEM.ipynb)\n",
     "* [Contrast Transfer Function](CH3_03-CTF.ipynb)\n",
     "* [Linear Image Approximation](CH3_04-Linear_Image_Approsimation.ipynb)\n",
-    "* [Defocus Thickness Map](CH3_05)\n",
-    "* [Image Processing](CH3_06-ImageProcessing.ipynb)\n",
-    "* [HRTEM Image Analysis](CH3_07-ImageAnalysis.ipynb)\n",
+    "* [Defocus Thickness Map](CH3_05-Defocus_Thickness)\n",
+    "* [Image Processing](CH3_06-Image_Processing.ipynb)\n",
+    "* [HRTEM Image Analysis](CH3_07-Image_Analysis.ipynb)\n",
     " \n",
     "**Z-Contrast**\n",
-    "* [Z-contrast Images](CH3_08)\n",
-    "* [Ronchigrams](CH3_09-Ronchigrams.ipynb)\n",
-    "* [Find Atoms](CH3_010-Find_Atoms.ipynb)\n",
+    "* [Thermal-Diffuse Scattering](CH3_08-Thermal_Diffuse_Scattering.ipynb)\n",
+    "* [Z-Contrast Imaging](CH3_09-Z_Contrast)\n",
+    "* [Ronchigrams](CH3_10-Ronchigrams.ipynb)\n",
+    "* [Find Atoms](CH3_11-Find_Atoms.ipynb)\n",
     "\n",
     " "
    ]
