--- a/Imaging/CH3_00-Imaging.ipynb
+++ b/Imaging/CH3_00-Imaging.ipynb
@@ -37,8 +37,8 @@
     "**Phase Contrast Imaging**\n",
     "* [Introduction to Phase Contrast Imaging](CH3_02-Intro_HRTEM.ipynb)\n",
     "* [Contrast Transfer Function](CH3_03-CTF.ipynb)\n",
-    "* [Linear Image Approximation](CH3_04-Linear_Image_Approsimation.ipynb)\n",
-    "* [Defocus Thickness Map](CH3_05-Defocus_Thickness)\n",
+    "* [Linear Image Approximation](CH3_04-Linear_Image_Approximation.ipynb)\n",
+    "* [Defocus Thickness Map](CH3_05-Defocus_Thickness.ipynb)\n",
     "* [Image Processing](CH3_06-Image_Processing.ipynb)\n",
     "* [HRTEM Image Analysis](CH3_07-Image_Analysis.ipynb)\n",
     " \n",
