--- a/Spectroscopy/CH4_00-Spectroscopy.ipynb
+++ b/Spectroscopy/CH4_00-Spectroscopy.ipynb
@@ -65,7 +65,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -79,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.11"
   },
   "toc": {
    "base_numbering": 1,
