--- a/Spectroscopy/CH4_01-Introduction.ipynb
+++ b/Spectroscopy/CH4_01-Introduction.ipynb
@@ -15,19 +15,15 @@
     "\n",
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM/main/Spectroscopy/CH4_01-Introduction.ipynb)\n",
-    " \n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Spectroscopy/CH4_01-Introduction.ipynb)\n",
-    "\n",
     "\n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, Spring 2022\n",
     "\n",
     "Microscopy Facilities<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
@@ -3797,7 +3793,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3811,7 +3807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.11"
   },
   "toc": {
    "base_numbering": 1,
