--- a/Spectroscopy/CH4_07-Introduction_Core_Loss.ipynb
+++ b/Spectroscopy/CH4_07-Introduction_Core_Loss.ipynb
@@ -4895,7 +4895,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4909,7 +4909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.11"
   },
   "toc": {
    "base_numbering": "7",
