--- a/Imaging/CH3_09-Z_Contrast.ipynb
+++ b/Imaging/CH3_09-Z_Contrast.ipynb
@@ -164,7 +164,7 @@
     "##  Z-contrast imaging\n",
     "A Z-contrast image is acquired by scanning a ``convergent`` beam accross the sample and collecting signals with an ``annular`` (ring-like) detector. The detector sits in the convergent beam electron diffraction pattern plane and so it integrates over a ring-like part of the convergent beam diffraction (CBED) pattern.\n",
     "\n",
-    "More generally a scanning transmisison electron microscopy (STEM) image is still scanning the same  probe but integrates over different portions of the CBED pattern. A ``bright field detector`` for instance integratea over the inner part of the CBED pattern and is ``disk-like``."
+    "More generally a scanning transmisison electron microscopy (STEM) image is still scanning the same  probe but integrates over different portions of the CBED pattern. A ``bright field detector`` for instance integrates over the inner part of the CBED pattern and is ``disk-like``."
    ]
   },
   {
@@ -6593,7 +6593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.11"
   },
   "toc": {
    "base_numbering": "9",
