--- a/Spectroscopy/CH4_09-Analyse_Core_Loss.ipynb
+++ b/Spectroscopy/CH4_09-Analyse_Core_Loss.ipynb
@@ -3491,7 +3491,7 @@
  "metadata": {
   "hide_code_all_hidden": true,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3505,7 +3505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.11"
   },
   "toc": {
    "base_numbering": "9",
