--- a/Spectroscopy/CH4_07-Introduction_Core_Loss.ipynb
+++ b/Spectroscopy/CH4_07-Introduction_Core_Loss.ipynb
@@ -3851,6 +3851,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.11"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": "7",
